# email-client

./: .gitignore  Cargo.toml  Dioxus.toml  bun.lockb  package.json  tailwind.config.js
public/: tailwind.css
src/: main.rs
src-tauri/: tauri.conf.json
src/component/: Mail.svelte  NavBar.svelte
src/components/: Mail.rs  NavBar.rs  mod.rs
src/layout/: MainLayout.rs  mod.rs
src/routes/: +layout.svelte  +page.svelte  Router.rs  mod.rs
src/routes/send/: +page.svelte
src/routes/trash/: +page.svelte
src/views/: Home.rs  PageNotFound.rs  Profile.rs  Send.rs  Trash.rs  mod.rs
