[package]
name = "email-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-free-icons = { version = "0.7.0", features = [
  "font-awesome-brands",
  "font-awesome-regular",
  "font-awesome-solid",
] }
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
